[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/EndHarvest.gd" type="Script" id=1]
[ext_resource path="res://components/MainHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/worldmap/world0.png" type="Texture" id=3]
[ext_resource path="res://components/HarvestStatPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/ld52/ld52_def_normal.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/ld52/ld52_def_large.tres" type="DynamicFont" id=6]
[ext_resource path="res://components/RewardCard.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/ld52/ld52_def_xsmall.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Units/AlienIcon.tres" type="Texture" id=9]
[ext_resource path="res://assets/Juice/juicebox.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="EndHarvest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
stat_panel_pop_np = NodePath("UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel/PopStatPanel")
stat_panel_panic_np = NodePath("UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel/PanicStatPanel")
stat_panel_juice_np = NodePath("UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel/JuiceStatPanel")

[node name="UI" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Background" type="MarginContainer" parent="UI"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="UI/Background"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="MainHUD" parent="UI" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( -1179, 435 )
title = "Mothership"
show_mother_ship_text = false
unit_slot_clickable = false

[node name="ButtonBar" type="MarginContainer" parent="UI"]
margin_left = 1800.0
margin_right = 1920.0
margin_bottom = 94.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_top = 44

[node name="ButtonBar" type="PanelContainer" parent="UI/ButtonBar"]
margin_top = 44.0
margin_right = 120.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/panel = SubResource( 2 )

[node name="MaginContainer" type="MarginContainer" parent="UI/ButtonBar/ButtonBar"]
margin_right = 120.0
margin_bottom = 50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="UI/ButtonBar/ButtonBar/MaginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="BackButton" type="Button" parent="UI/ButtonBar/ButtonBar/MaginContainer/HBox"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
custom_fonts/font = ExtResource( 8 )
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_top = 183.0
margin_right = 1920.0
margin_bottom = 897.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_left = 723.0
margin_right = 1197.0
margin_bottom = 319.0
size_flags_horizontal = 4
alignment = 1

[node name="StatPanel" type="PanelContainer" parent="UI/VBoxContainer/HBoxContainer"]
margin_right = 474.0
margin_bottom = 319.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer/HBoxContainer/StatPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 467.0
margin_bottom = 312.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer"]
margin_right = 460.0
margin_bottom = 305.0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 6 )
text = "Harvest Results"
align = 1

[node name="CountryNameLabel" type="Label" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 460.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 5 )
text = "Country Name"
align = 1

[node name="StatPanel" type="VBoxContainer" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 460.0
margin_bottom = 305.0
rect_min_size = Vector2( 460, 0 )

[node name="PopStatPanel" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel" instance=ExtResource( 4 )]
margin_right = 460.0
stat_name = "Population"
max_value = 1
value = 1
increment_text = "+0"

[node name="JuiceStatPanel" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel" instance=ExtResource( 4 )]
margin_top = 68.0
margin_right = 460.0
margin_bottom = 132.0
stat_name = "Cattle Juice"
increment_text = "+0"

[node name="PanicStatPanel" parent="UI/VBoxContainer/HBoxContainer/StatPanel/MarginContainer/VBoxContainer/StatPanel" instance=ExtResource( 4 )]
margin_top = 136.0
margin_right = 460.0
margin_bottom = 200.0
stat_name = "Panic"
max_value = 1
value = 1
increment_text = "+0"
info_hint = "A panicked Cattle will flee with more stamina"

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer"]
margin_left = 650.0
margin_top = 323.0
margin_right = 1270.0
margin_bottom = 680.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/MarginContainer"]
margin_right = 620.0
margin_bottom = 357.0

[node name="PanelContainer" type="PanelContainer" parent="UI/VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 191.0
margin_right = 429.0
margin_bottom = 53.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 231.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "Pick a reward"
align = 1

[node name="RewardCardGrid" type="GridContainer" parent="UI/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 620.0
margin_bottom = 357.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 10
columns = 3

[node name="RewardCard1" parent="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid" instance=ExtResource( 7 )]
unit_name = "Alien"
texture = ExtResource( 9 )
display_name = "Alien"

[node name="RewardCard2" parent="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid" instance=ExtResource( 7 )]
margin_left = 210.0
margin_right = 410.0
unit_name = "Alien"
texture = ExtResource( 9 )
amount = 3
display_name = "Alien"

[node name="RewardCard3" parent="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid" instance=ExtResource( 7 )]
margin_left = 420.0
margin_right = 620.0
cattle_juice = true
texture = ExtResource( 10 )
amount = 3
display_name = "Cattle Juice"

[node name="BackButton" type="Button" parent="UI/VBoxContainer"]
margin_left = 910.0
margin_top = 684.0
margin_right = 1010.0
margin_bottom = 714.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 8 )
text = "Back"

[connection signal="pressed" from="UI/ButtonBar/ButtonBar/MaginContainer/HBox/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="picked" from="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid/RewardCard1" to="." method="_on_RewardCard_picked"]
[connection signal="picked" from="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid/RewardCard2" to="." method="_on_RewardCard_picked"]
[connection signal="picked" from="UI/VBoxContainer/MarginContainer/VBoxContainer/RewardCardGrid/RewardCard3" to="." method="_on_RewardCard_picked"]
[connection signal="pressed" from="UI/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
